[gd_scene load_steps=2 format=3 uid="uid://charades"]

[ext_resource type="Script" path="res://scripts/games/charades.gd" id="1_charades"]

[node name="Charades" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_charades")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.08, 0.12, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 60.0
offset_right = -40.0
offset_bottom = -40.0
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Charades"

[node name="Spacer" type="Control" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RoundLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Round 1/3"

[node name="Spacer2" type="Control" parent="VBox/Header"]
layout_mode = 2
custom_minimum_size = Vector2(20, 0)

[node name="TimerLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "60"

[node name="ActorSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ActorLabel" type="Label" parent="VBox/ActorSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Acting:"
horizontal_alignment = 1

[node name="ActorName" type="Label" parent="VBox/ActorSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Player Name"
horizontal_alignment = 1

[node name="PromptSection" type="PanelContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PromptLabel" type="Label" parent="VBox/PromptSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "???"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GuessSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GuessInput" type="LineEdit" parent="VBox/GuessSection"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
placeholder_text = "Type your guess..."
alignment = 1
max_length = 50

[node name="GuessButton" type="Button" parent="VBox/GuessSection"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Guess"

[node name="SkipButton" type="Button" parent="VBox/GuessSection"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
visible = false
theme_override_font_sizes/font_size = 20
text = "Skip Prompt"

[node name="StartTurnButton" type="Button" parent="VBox/GuessSection"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
visible = false
theme_override_font_sizes/font_size = 24
text = "Start My Turn"

[node name="WaitingForActorLabel" type="Label" parent="VBox/GuessSection"]
layout_mode = 2
visible = false
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Waiting for actor to start..."
horizontal_alignment = 1

[node name="FeedbackLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1

[node name="PlayersStatus" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = false
